--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "scripts": {
     "start": "node index.js"
   },
+   "engines" : { 
+    "node" : "18.x"
+  },
   "dependencies": {
     "@discordjs/opus": "^0.3.3",
     "discord-player": "^3.3.2",
